# kwan_autonomous_driving_assignments

./: README.md
RRT_practice_nh/: env_2d.py  kwan_practice.py  main.ipynb  main.py  rrt2d.py  rrtstar2d.py
height_map/: CMakeLists.txt  package.xml
height_map/include/velodyne_height_map/: heightmap.h
height_map/launch/: .union.launch.swp  height_map.launch  heightmap_nodelet.launch
height_map/rviz/: height_map.rviz
height_map/src/: heightmap.cpp  heightmap_node.cpp  heightmap_nodelet.cpp
tracker/: CMakeLists.txt  package.xml
tracker/launch/: tracker.launch
tracker/rviz/: carla.rviz
tracker/src/: main.cpp
